--- a/src/krunner.qrc
+++ b/src/krunner.qrc
@@ -1,4 +1,8 @@
 <!DOCTYPE RCC>
+<!--
+SPDX-FileCopyrightText: none
+SPDX-License-Identifier: CC0-1.0
+-->
 <RCC version="1.0">
     <qresource prefix="/kservicetypes5/">
         <file alias="plasma-runner.desktop">data/servicetypes/plasma-runner.desktop</file>
